--- a/app/assets/stylesheets/blur_effect.scss
+++ b/app/assets/stylesheets/blur_effect.scss
@@ -1,5 +1,15 @@
 .hsContent::before {
-  background: image-url('rock-island.jpeg') 0 / cover fixed;
+  background: image-url('el-capitan-2.jpg') 0 / cover fixed;
+  content: '';
+  margin: -100px;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  -webkit-filter: blur(10px);
+  filter: blur(10px);
+  z-index: -1;
 }
 
 .hsContent {
@@ -12,7 +22,8 @@
   overflow: hidden;
 }
 
-.hsContent::before {
+.greeting::before {
+  background: image-url('el-capitan-2.jpg') 0 / cover fixed;
   content: '';
   margin: -100px;
   position: absolute;
@@ -20,6 +31,7 @@
   right: 0;
   bottom: 0;
   left: 0;
-  filter: blur(18px);
+  -webkit-filter: blur(10px);
+  filter: blur(10px);
   z-index: -1;
 }
