--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -4,7 +4,8 @@
 
 body {
   font-family: "myriad-set-pro_ultralight";
-  background-color: #15212f;
+  // background-color: #090e14;
+  background-color: #fff;
 }
 section {
   border: none !important;
@@ -40,15 +41,11 @@ h5 {
   color: #cccccc;
   margin-top: 10em;
 }
-audio {
-}
 .nav {
   font-size: 15px;
 }
-.navbar {
-}
 .header {
-    background: image-url('rock-island.jpeg');
+    background: image-url('el-capitan-2.jpg');
     background-position: center center;
     background-repeat: no-repeat;
     background-attachment: fixed;
@@ -59,7 +56,7 @@ audio {
 }
 .logo {
   height: 5em;
-  position: relative;;
+  position: relative;
   left: -15em;
 }
 .hsContent {
@@ -79,18 +76,29 @@ button {
   background: transparent;
   border: none;
 }
-.controls i {
-  padding-left: 4.95em;
-  margin-right: .2em;
+.controls {
+  margin-top: 30px;
+}
+.volume1 {
+  visibility: visible;
+  opacity: 1;
+  transition: opacity 2s linear;
 }
 .icon.ion-ios-volume-high {
-  font-size: 45px;
-  color: rgba(255,255,255,.25);
+  font-size: 40px;
+  color: rgba(255,255,255,.95);
+  cursor:pointer;
 }
 .icon.ion-ios-volume-low {
-  font-size: 45px;
-  color: rgba(255,255,255,.25);
-  margin-right: .57em;
+  font-size: 40px;
+  color: rgba(255,255,255,.95);
+  cursor: pointer;
+}
+.arrow {
+  padding-top: 25px;
+}
+#mute {
+  margin-left: 9px;
 }
 #slide-1 .hsContent {
 	bottom: 0;
@@ -98,13 +106,24 @@ button {
   background: rgba(255,255,255,0.3);
   border-radius: 5px;
   padding: 12px;
-  padding-left: 1.5em;
+  padding-left: 28px;
 }
 #slide-1 h2 {
-  color: rgba(255,255,255,0.6) !important;
+  color: rgba(255,255,255,0.95) !important;
+  letter-spacing: 0px;
 }
 #slide-1 h4 {
-  color: rgba(255,255,255,.60) !important;
+  color: rgba(255,255,255,.95) !important;
+}
+.menu span {
+  color: #fff;
+  margin-left: 232px;
+}
+.menu {
+  font-size: 30px;
+}
+.ion-navicon:hover {
+  cursor:pointer;
 }
 #slide-1 .greeting {
   width: 19em;
@@ -114,12 +133,24 @@ button {
  -webkit-backdrop-filter: blur(1.5px);
 }
 #slide-2 {
-  padding-top: 15em;
+  padding-top: 6em;
   padding-bottom: 10em;
-  text-align: center
+  text-align: center;
+  background-color: #0a1017;
 }
 #slide-2 .col-md-4 {
-  padding-bottom: 5em;
+}
+#slide-2 h3 {
+  margin: 30px 0px 30px;
+}
+.text-1 {
+  margin-bottom: 40px;
+}
+#slide-2 .nav-arrow {
+  margin-top: 50px;
+}
+.pro-pic {
+  height: 150px;
 }
 .about {
   color: #fff;
@@ -128,48 +159,109 @@ button {
   height: 14em;
 }
 .item.bottom-text {
-  padding-top: 21em !important;
+  padding-top: 11em !important;
 }
 #slide-3 {
-  color: #fff;
-  padding-top: 10em;
-  padding-bottom: 15em;
+  background-color: #090e14
 }
-#slide-3 .top-text {
-  padding-top: 10em;
+#slide-3 h2 {
+  margin: 0px 0px 60px;
 }
 #slide-3 p {
-  margin-top: 2em;
+  padding-top: 15px;
 }
-#slide-3 .bottom-text {
-  padding-top: 20em;
+#slide-3 .nav-arrow {
+  padding: 30px 0px 0px 125px;
+}
+// #slide-3 {
+//   color: #fff;
+//   padding-top: 0em;
+//   padding-bottom: 15em;
+// }
+// #slide-3 .top-text {
+//   padding-top: 10em;
+// }
+// #slide-3 p {
+//   margin-top: 2em;
+// }
+// #slide-3 .bottom-text {
+//   padding-top: 10em;
+// }
+#slide-3 .dev-text {
+  padding: 100px 100px 0px 125px;
+}
+.dev-img {
+  height: 710px;
+  padding: 200px;
+  background: image-url('cloud-mountains.jpeg');
+  background-size: cover;
 }
 #slide-4 {
+  background-color: #090e14;
+}
+#slide-4 .dev-text {
+  padding: 180px 100px 0px 125px;
+}
+#slide-4 .p {
+  padding-top: 15px;
+}
+#slide-4 .nav-arrow {
+  padding: 30px 0px 0px 125px;
+}
+.des-img {
+  height: 710px;
+  padding: 200px;
+  background: image-url('cloud-mountains.jpeg');
+  background-position: left 0px bottom 0px;
+}
+#slide-5 {
   color: #fff;
-  padding-top: 10em;
-  padding-bottom: 20em;
+  padding-top: 8em;
+  background-color: #0a1017;
 }
-#slide-4 .contact {
-  padding-top: 5em;
+#slide-5 .contact {
+  padding-top: 2em;
 }
-#slide-4 p {
+#slide-5 p {
   padding-top: 1em;
 }
-#slide-4 .email {
+#slide-5 .email {
   padding-top: 3em;
+  // padding-bottom: 0px;
 }
-#slide-4 .btn {
+#slide-5 a {
   border: 1px solid;
   font-size: 1.5em;
   letter-spacing: .75px;
+  color: #337ab7;
 }
-#slide-4 .btn:hover {
+#slide-5 a:hover {
   color: #659bca;
 }
+#slide-5 a:active {
+  color: #337ab7;
+}
+#slide-5 a:visited {
+  color: #337ab7;
+}
+#slide-5 .brands {
+  margin-top: 150px;
+  padding-bottom: 15px;
+}
+#slide-5 .brands img {
+  height: 40px;
+}
+#slide-5 .modal {
+  margin-top: 25px;
+}
+.wyncode img {
+  cursor: pointer;
+}
+
 footer {
   padding-top: 12em;
   padding-bottom: 1em;
-  background-color: #101925;
+  background-color: #080c12;
 }
 footer .footer-logo {
   padding-bottom: 0.5em;
