--- a/app/assets/stylesheets/typewriter.css
+++ b/app/assets/stylesheets/typewriter.css
@@ -13,11 +13,11 @@
 /* Animation */
 .anim-typewriter {
   animation: typewriter 3s steps(30) 3s 1 normal both,
-             blinkTextCursor 1500ms steps(30) 6 normal;
+             blinkTextCursor 1500ms steps(30) infinite normal;
 }
 @keyframes typewriter{
   from{width: 0;}
-  to{width: 97%;}
+  to{width: 75%;}
 }
 @keyframes blinkTextCursor{
   from{border-right-color: rgba(255,255,255,.75);}
