--- a/app/assets/stylesheets/work.css
+++ b/app/assets/stylesheets/work.css
@@ -1,8 +1,3 @@
-.navbar-header {
-}
-.brand-heading {
-  opacity: .25 !important;
-}
 .navbar-header img {
   height: 4em;
 }
@@ -13,9 +8,12 @@
   margin-top: 17em;
   padding-left: 5em;
 }
+.intro-body .icon.ion-ios-volume-high {
+  font-size: 45px;
+  color: rgba(255,255,255,.25);
+}
 .top-nav-collapse {
-  /*background-color: #101925;*/
-  background-color: rgba(16, 25, 37, 0.98);
+  background-color: rgba(8, 12, 18, 0.9);
 }
 #navbar {
   width: 75%;
@@ -45,16 +43,27 @@ a:focus, a:hover {
   text-decoration: none;
 }
 #about {
-  background-color: #15212f;
-  padding-top: 7em;
+  background-color: #090e14;
   padding-bottom: 4em;
 }
+.list-horizontal {
+  margin-right: 35px;
+  font-size: 0px;
+}
+.list-horizontal li {
+	display: inline-block;
+}
+.list-horizontal li:before {
+	content: '\00a0\2022\00a0\00a0';
+	color: #fff;
+	font-size: 20px;
+}
 #about .heading {
-  margin-bottom: 3em;
+  margin-top: 2em;
 }
 #about .container {
-  padding-top: 7em;
-  padding-bottom: 12em;
+  padding-top: 4em;
+  padding-bottom: 5em;
 }
 #about h2 {
   color: rgba(255, 255, 255, 0.86);
@@ -63,6 +72,7 @@ a:focus, a:hover {
 #about h3 {
   color: rgba(255, 255, 255, 0.86);
   font-size: 20px;
+  margin-top: 0px;
 }
 #about h4 {
   /*font-family: '.tk-adobe-garamond-prodelete';
@@ -83,6 +93,9 @@ a:focus, a:hover {
   -moz-box-shadow:    9px 10px 15px 3px rgba(0, 0, 0, 0.2);
   -webkit-box-shadow: 9px 10px 15px 3px rgba(0, 0, 0, 0.2);
   text-align: center;
+}
+#portfolio img:hover {
+  cursor:pointer;
 }
 #portfolio h3 {
   text-align: center;
@@ -126,41 +139,49 @@ padding-top: 10em;
   line-height: 3em;
   margin-top: 1em;
 }
+.modal {
+  margin-top: 150px;
+}
 .portfolio-2 {
-  background-color: rgba(31,31,31,0.75);
+  background-color: #171717;
 }
 .portfolio-2 h1 {
   font-weight: 900 !important;
-  color: #fff;
+  color: #9f9f9f;
 }
 .portfolio-2 h2 {
-  color: #8ad19d;
+  color: #7f97a2;
+}
+.portfolio-2 p {
+  color: #9f9f9f;
 }
 .portfolio-2 .col-lg-12 {
-  color: #A5A4A4;
   padding-top: 5em;
   padding-bottom: 0em
 }
 .portfolio-2 .info {
-  color: #d2d2d2;
   text-align: center;
   margin-top: 1em;
 }
 .portfolio-3 {
-  background-color: #475261;
+  background-color: #fff;
+}
+.portfolio-3 h1 {
+  color: #4c4c4c;
 }
 .portfolio-3 h2 {
-  color: #E3EEFF;
+  color: #92aac7;
+}
+.portfolio-3 p {
+  color: #4c4c4c;
 }
 .portfolio-3 .col-lg-12 {
-  color: #fff;
   padding-top: 5em;
   padding-bottom: 0em
 }
 .portfolio-3 .info {
   text-align: center;
   margin-top: 1em;
-  color: #fff;
 }
 .portfolio-4 {
   background-color: #5c8886;
@@ -175,4 +196,7 @@ padding-top: 10em;
 .portfolio-4 .info {
   text-align: center;
   margin-top: 1em;
+}
+.modal-open .modal {
+  background-color: rgba(8, 12, 18, 0.9);
 }
