--- a/app/views/home/work.html.erb
+++ b/app/views/home/work.html.erb
@@ -15,13 +15,13 @@
                    <a href="#page-top"></a>
                </li>
                <li>
-                   <a class="page-scroll" href="/">HOME</a>
+                   <a class="page-scroll sliding-u-l-r-5" onClick="window.location.href = window.location.href='/'">HOME</a>
                </li>
                <li>
-                   <a class="page-scroll" href="https://github.com/djohnson0308">GITHUB</a>
+                   <a class="page-scroll sliding-u-l-r-5" href="https://github.com/djohnson0308">GITHUB</a>
                </li>
                <li>
-                   <a class="page-scroll" href="https://www.linkedin.com/in/devon-l-johnson-80a76884/">LINKEDIN</a>
+                   <a class="page-scroll sliding-u-l-r-5" href="https://www.linkedin.com/in/devon-l-johnson-80a76884/">LINKEDIN</a>
                </li>
            </ul>
        </div>
@@ -34,16 +34,13 @@
    <div class="intro-body">
        <div class="container">
            <div class="row">
-               <div class="col-md-8 col-md-offset-2">
-                   <h1 data-aos="fade-up" class="brand-heading">Work</h1>
-               </div>
                <div class="col-md-1 col-md-offset-11 col-xs-2 col-xs-offset-10 volume">
-                 <a class="page-scroll volume" data-aos="fade-up"><i class="icon ion-ios-volume-high" id="mute" onclick="document.getElementById('player').muted=!document.getElementById('player').muted"></i></a>
+                 <!-- <a class="page-scroll volume" data-aos="fade-up"><i class="icon ion-ios-volume-high" id="mute" onclick="document.getElementById('player').muted=!document.getElementById('player').muted"></i></a> -->
                  <link href="//code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet">
-                 <audio id="player" loop="true">
+                 <!-- <audio id="player" loop="true">
                    <source src="<%= audio_path '03 Destiny.m4a'%>"></source>
                    <source src="<%= audio_path '03 Destiny 1.mp3'%>"></source>
-                 </audio>
+                 </audio> -->
                </div>
            </div>
        </div>
@@ -54,10 +51,22 @@
 <section id="about" class="about">
    <div class=container>
      <div class="row">
-       <div class="col-lg-12 text-center heading">
+       <div class="col-lg-12 text-center">
+           <h1 data-aos="fade" class="brand-heading">Work</h1>
+       </div>
+       <div class="list-horizontal text-center">
+         <ul>
+           <li></li>
+           <li></li>
+           <li></li>
+           <li></li>
+           <li></li>
+         </ul>
+       </div>
+       <div class="col-lg-12 text-center heading" data-aos="fade-left" data-aos-offset="0">
          <h2>What I've been up to</h2>
        </div>
-       <div class="col-lg-12 text-center">
+       <div class="col-lg-12 text-center" data-aos="fade-left" data-aos-offset="0">
          <h3>Here's a selection of some of my recent work.</h3>
        </div>
      </div>
@@ -70,7 +79,7 @@
         <div class="row">
             <div class="display col-lg-12 text-center">
               <div class="col-md-6 col-md-offset-3 text-center">
-                <a href="javascript:window.location.reload(true)"><img data-aos="fade-up" data-aos-duration="10000" class="img-portfolio img-responsive" src="/assets/tagsnooper-v1.png"></a>
+                <a data-toggle="modal" data-target=".ts-modal"><img data-aos="fade-up" data-aos-duration="10000" class="img-portfolio img-responsive" src="/assets/tagsnooper-home.png"></a>
               </div>
             </div>
               <div class="col-lg-12 text-center">
@@ -84,33 +93,61 @@
         <!-- /.row -->
     </div>
     <!-- /.container -->
-</section>
-<section id="portfolio" class="portfolio-2">
-   <div class="container">
-       <div class="row">
-           <div class="display col-lg-12 text-center">
-             <div class="col-md-6 col-md-offset-3 text-center">
-               <a href="javascript:window.location.reload(true)"><img data-aos="fade-up" data-aos-duration="10000" class="img-portfolio img-responsive" src="/assets/hustle.png"></a>
-             </div>
-           </div>
-             <div class="col-lg-12 text-center" style="color: #f1f1f1;">
-               <h1>Hustle</h1>
-               <h2>Web Development and Design UI / UX</h2>
-               <div class="info col-md-6 col-md-offset-3" style="font-family: 'myriad-set-pro_thin'">
-                 <p>A redesign of a video production agency website I am finishing for a client. The site is built with Ruby, Javascript, Ruby on Rails, Bootstrap, HTML5, and CSS3.</p>
-               </div>
-             </div>
-       </div>
-       <!-- /.row -->
-   </div>
-   <!-- /.container -->
+    <div class="container text-center">
+      <div class="modal fade ts-modal" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-lg">
+          <div class="modal-content">
+            <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+
+              <!-- Wrapper for slides -->
+              <div class="carousel-inner">
+                <div class="item active">
+                 <img class="img-responsive" src="/assets/tagsnooper-home-2.png" alt="...">
+                  <div class="carousel-caption">
+                  </div>
+                </div>
+                <div class="item">
+                  <img class="img-responsive" src="/assets/tagsnooper-signup.png" alt="...">
+                  <div class="carousel-caption">
+                  </div>
+                </div>
+                <div class="item">
+                  <img class="img-responsive" src="/assets/tagsnooper-dashboard.png" alt="...">
+                  <div class="carousel-caption">
+                  </div>
+                </div>
+                <div class="item">
+                  <img class="img-responsive" src="/assets/tagsnooper-search.png" alt="...">
+                  <div class="carousel-caption">
+                  </div>
+                </div>
+                <div class="item">
+                  <img class="img-responsive" src="/assets/tagsnooper-search-results.png" alt="...">
+                  <div class="carousel-caption">
+                  </div>
+                </div>
+              </div>
+
+              <!-- Controls -->
+              <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+                <span class="glyphicon glyphicon-chevron-left"></span>
+              </a>
+              <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+                <span class="glyphicon glyphicon-chevron-right"></span>
+              </a>
+
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
 </section>
 <section id="portfolio" class="portfolio-3">
    <div class="container">
        <div class="row">
            <div class="display col-lg-12 text-center">
              <div class="col-md-6 col-md-offset-3 text-center product">
-               <a href="javascript:window.location.reload(true)"><img data-aos="fade-up" data-aos-duration="10000" class="img-portfolio img-responsive" src="/assets/local-lilly-home.png"></a>
+               <a data-toggle="modal" data-target=".ll-modal"><img data-aos="fade-up" data-aos-duration="10000" class="img-portfolio img-responsive" src="/assets/local-lilly-home.png"></a>
              </div>
            </div>
              <div class="col-lg-12 text-center">
@@ -124,13 +161,144 @@
        <!-- /.row -->
    </div>
    <!-- /.container -->
+   <div class="container text-center">
+     <div class="modal fade ll-modal" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+       <div class="modal-dialog modal-lg">
+         <div class="modal-content">
+           <div id="ll-carousel" class="carousel slide" data-ride="carousel">
+
+             <!-- Wrapper for slides -->
+             <div class="carousel-inner">
+               <div class="item active">
+                <img class="img-responsive" src="/assets/local-lilly-home.png" alt="...">
+                 <div class="carousel-caption">
+                 </div>
+               </div>
+               <div class="item">
+                 <img class="img-responsive" src="/assets/local-lilly-about.png" alt="...">
+                 <div class="carousel-caption">
+                 </div>
+               </div>
+               <div class="item">
+                 <img class="img-responsive" src="/assets/local-lilly-how.png" alt="...">
+                 <div class="carousel-caption">
+                 </div>
+               </div>
+               <div class="item">
+                 <img class="img-responsive" src="/assets/local-lilly-work.png" alt="...">
+                 <div class="carousel-caption">
+                 </div>
+               </div>
+               <div class="item">
+                 <img class="img-responsive" src="/assets/local-lilly-pricing.png" alt="...">
+                 <div class="carousel-caption">
+                 </div>
+               </div>
+               <div class="item">
+                 <img class="img-responsive" src="/assets/local-lilly-contact.png" alt="...">
+                 <div class="carousel-caption">
+                 </div>
+               </div>
+               <div class="item">
+                 <img class="img-responsive" src="/assets/local-lilly-footer.png" alt="...">
+                 <div class="carousel-caption">
+                 </div>
+               </div>
+             </div>
+
+             <!-- Controls -->
+             <a class="left carousel-control" href="#ll-carousel" role="button" data-slide="prev">
+               <span class="glyphicon glyphicon-chevron-left"></span>
+             </a>
+             <a class="right carousel-control" href="#ll-carousel" role="button" data-slide="next">
+               <span class="glyphicon glyphicon-chevron-right"></span>
+             </a>
+
+           </div>
+         </div>
+       </div>
+     </div>
+   </div>
+</section>
+<section id="portfolio" class="portfolio-2">
+   <div class="container">
+       <div class="row">
+           <div class="display col-lg-12 text-center">
+             <div class="col-md-6 col-md-offset-3 text-center">
+               <a data-toggle="modal" data-target=".ps-modal"><img data-aos="fade-up" data-aos-duration="10000" class="img-portfolio img-responsive" src="/assets/hustle.png"></a>
+             </div>
+           </div>
+             <div class="col-lg-12 text-center" style="color: #f1f1f1;">
+               <h1>Hustle</h1>
+               <h2>Web Development and Design UI / UX</h2>
+               <div class="info col-md-6 col-md-offset-3" style="font-family: 'myriad-set-pro_thin'">
+                 <p>A redesign of a video production agency website I am finishing for a client. The site is built with Ruby, Javascript, Ruby on Rails, Bootstrap, HTML5, and CSS3.</p>
+               </div>
+             </div>
+       </div>
+       <!-- /.row -->
+   </div>
+   <!-- /.container -->
+   <div class="container text-center">
+     <div class="modal fade ps-modal" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+       <div class="modal-dialog modal-lg">
+         <div class="modal-content">
+           <div id="ps-carousel" class="carousel slide" data-ride="carousel">
+
+             <!-- Wrapper for slides -->
+             <div class="carousel-inner">
+               <div class="item active">
+                <img class="img-responsive" src="/assets/hustle.png" alt="...">
+                 <div class="carousel-caption">
+                 </div>
+               </div>
+               <div class="item">
+                 <img class="img-responsive" src="/assets/hustle-home.png" alt="...">
+                 <div class="carousel-caption">
+                 </div>
+               </div>
+               <div class="item">
+                 <img class="img-responsive" src="/assets/hustle-fjmotorsports.png" alt="...">
+                 <div class="carousel-caption">
+                 </div>
+               </div>
+               <div class="item">
+                 <img class="img-responsive" src="/assets/hustle-works-1.png" alt="...">
+                 <div class="carousel-caption">
+                 </div>
+               </div>
+               <div class="item">
+                 <img class="img-responsive" src="/assets/hustle-works-2.png" alt="...">
+                 <div class="carousel-caption">
+                 </div>
+               </div>
+               <div class="item">
+                 <img class="img-responsive" src="/assets/hustle-contact.png" alt="...">
+                 <div class="carousel-caption">
+                 </div>
+               </div>
+             </div>
+
+             <!-- Controls -->
+             <a class="left carousel-control" href="#ps-carousel" role="button" data-slide="prev">
+               <span class="glyphicon glyphicon-chevron-left"></span>
+             </a>
+             <a class="right carousel-control" href="#ps-carousel" role="button" data-slide="next">
+               <span class="glyphicon glyphicon-chevron-right"></span>
+             </a>
+
+           </div>
+         </div>
+       </div>
+     </div>
+   </div>
 </section>
 <section id="portfolio" class="portfolio-4">
    <div class="container">
        <div class="row">
            <div class="display col-lg-12 text-center">
              <div class="col-md-6 col-md-offset-3 text-center">
-               <a href="javascript:window.location.reload(true)"><img data-aos="fade-up" data-aos-duration="10000" class="img-portfolio img-responsive" src="/assets/music-blog-home.png"></a>
+               <a data-toggle="modal" data-target=".sf-modal"><img data-aos="fade-up" data-aos-duration="10000" class="img-portfolio img-responsive" src="/assets/music-blog-home.png"></a>
              </div>
            </div>
              <div class="col-lg-12 text-center">
@@ -144,6 +312,34 @@
        <!-- /.row -->
    </div>
    <!-- /.container -->
+   <div class="container text-center">
+     <div class="modal fade sf-modal" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+       <div class="modal-dialog modal-lg">
+         <div class="modal-content">
+           <div id="sf-carousel" class="carousel slide" data-ride="carousel">
+
+             <!-- Wrapper for slides -->
+             <div class="carousel-inner">
+               <div class="item active">
+                <img class="img-responsive" src="/assets/stage-curtains.jpg" alt="...">
+                 <div class="carousel-caption">
+                   <h3>Coming Soon!</h3>
+                 </div>
+               </div>
+
+             <!-- Controls -->
+             <a class="left carousel-control" href="#sf-carousel" role="button" data-slide="prev">
+               <span class="glyphicon glyphicon-chevron-left"></span>
+             </a>
+             <a class="right carousel-control" href="#sf-carousel" role="button" data-slide="next">
+               <span class="glyphicon glyphicon-chevron-right"></span>
+             </a>
+
+           </div>
+         </div>
+       </div>
+     </div>
+   </div>
 </section>
 <footer>
   <div class="container">
@@ -152,7 +348,7 @@
     </div>
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
-        <div class="col-md-3 col-md-offset-1"><a href="/"><h3 class="nav-title">Home</h3></a></div>
+        <div class="col-md-3 col-md-offset-1"><a href="/" onclick="window.location.href = window.location.href='/'"><h3 class="nav-title">Home</h3></a></div>
         <div class="col-md-3 col-md-offset-1"><a href="https://github.com/djohnson0308"><h3 class="nav-title">Github</h3></a></div>
         <div class="col-md-3 col-md-offset-1"><a href="https://www.linkedin.com/in/devon-l-johnson-80a76884/"><h3 class="nav-title">LinkedIn</h3></a></div>
       </div>
@@ -164,7 +360,6 @@
     </div>
   </div>
 </footer>
-
 <script type="text/javascript">
 
 $(document).ready(function(){
@@ -178,10 +373,13 @@ $(document).ready(function(){
   // GSAP handles the cross browser vendor prefixes
   TweenMax.set($img,{autoAlpha:0});
   // animate CSS opacity to 1
-  TweenMax.to($img, 2.5, {autoAlpha:1});
+  TweenMax.to($img, 3.5, {autoAlpha:1});
+
+  TweenMax.set(".footer-logo", {opacity:0});
+  TweenMax.to(".footer-logo", 2, { y:-160 , opacity:1 , ease:Power1.easeInOut});
   // music player reload
   document.getElementById("player").play();
-  document.getElementsByTagName("audio")[0].volume = 0.20;
+  document.getElementsByTagName("audio")[0].volume = 0.02;
   // audio player mute button
   document.getElementById("mute").addEventListener("click", function (e) {
   var target = e.target;
@@ -201,27 +399,5 @@ function collapseNavbar() {
 
 $(window).scroll(collapseNavbar);
 $(document).ready(collapseNavbar);
-
-// LL carousel display
-var images = [];
-images[0] = "/assets/local-lilly-home.png";
-images[1] = "/assets/local-lilly-pricing.png";
-images[2] = "/assets/local-lilly-footer.png";
-images[3] = "/assets/local-lilly-home.png";
-images[4] = "/assets/local-lilly-pricing.png";
-images[5] = "/assets/local-lilly-footer.png";
-
-
-var i = 0;
-setInterval(fadeDivs, 5000);
-
-function fadeDivs() {
-    i = i < images.length ? i : 0;
-    console.log(i)
-    $('.product img').fadeOut(900, function(){
-        $(this).attr('src', images[i]).fadeIn(900);
-    })
-    i++;
-}
 
 </script>
