--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
     <link href="/assets/ionicons.min.css" media="screen" rel="stylesheet" /> -->
 
     <!-- ion icon css -->
-    <!-- <link href="//code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet"> -->
+    <link href="//code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet">
 
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -21,10 +21,12 @@
     <%= javascript_include_tag 'custom-scripts' %>
 
   </head>
-
   <body>
+
     <%= yield %>
 
+    <script src="/assets/classie.js"></script>
+    <script src="/assets/demo1.js"></script>
     <!-- Garamond Pro Font -->
     <script src="https://use.typekit.net/ycj8jkq.js"></script>
     <script>try{Typekit.load({ async: true });}catch(e){}</script>
@@ -40,6 +42,5 @@
     <script src="/assets/TweenMax.min.js"  type="text/javascript"></script>
     <script src="/assets/aos.js"  type="text/javascript"></script>
     <!-- <script src="/assets/enquire.min.js"  type="text/javascript"></script> -->
-
   </body>
 </html>
