--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -35,10 +35,10 @@
           </audio>
           <div class="controls row text-center">
             <div class="col-md-12">
-              <div class="arrow col-md-1 col-md-offset-5">
+              <div class="arrow col-md-1 col-md-offset-5 col-xs-1 col-xs-offset-5">
                 <a href="#slide-2" class="ion-ios-arrow-down" style="color:#fff; font-size:30px;"></a>
               </div>
-              <div class="volume1 col-md-1 col-md-offset-3">
+              <div class="volume1 col-md-1 col-md-offset-3 col-xs-1 col-xs-offset-3">
                 <a class="icon ion-ios-volume-low" id="mute" onclick="document.getElementById('player').muted=!document.getElementById('player').muted"></a>
               </div>
             </div>
