background color reset for body

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -3,12 +3,10 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 body {
   font-family: "myriad-set-pro_ultralight";
-  // background-color: #090e14;
-  background-color: #fff;
+  background-color: #080c12 ;
 }
 section {
   border: none !important;
-  overflow-y: hidden;
 }
 
 p {
