--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -52,13 +52,28 @@ h5 {
     width: 100%;
     position: absolute;
 }
-@media only screen and (max-width: 768px) {
-    /* For mobile phones: */
+@media screen and (max-device-width: 1024px) {
     .header {
       background: image-url('el-capitan-2.jpg');
       background-size: cover;
     }
 }
+@media only screen and (min-device-width: 768px) {
+  // For tablets
+  .header {
+    background: image-url('el-capitan-2.jpg');
+    background-size: cover;
+  }
+}
+@media only screen and (min-device-width: 480px){
+  // For phones
+  .header {
+    background: image-url('el-capitan-2.jpg');
+    background-size: cover;
+  }
+}
+
+
 .logo {
   height: 5em;
   position: relative;
