--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -63,19 +63,19 @@ h5 {
     width: 100%;
     position: absolute;  }
 }
-// @media only screen and (min-device-width: 768px) {
-//   // For tablets
-//   .header {
-//     background: image-url('el-capitan-2.jpg');
-//     background-position: center center;
-//     background-repeat: no-repeat;
-//     background-attachment: fixed;
-//     background-size: cover;
-//     height: 100%;
-//     width: 100%;
-//     position: absolute;
-//   }
-// }
+@media only screen and (min-device-width: 768px) {
+  // For tablets
+  .header {
+    background: image-url('el-capitan-2.jpg');
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+    height: 100%;
+    width: 100%;
+    position: absolute;
+  }
+}
 // @media only screen and (min-device-width: 480px){
 //   // For phones
 //   .header {
