--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -76,19 +76,19 @@ h5 {
     position: absolute;
   }
 }
-// @media only screen and (min-device-width: 480px){
-//   // For phones
-//   .header {
-//     background: image-url('el-capitan-2.jpg');
-//     background-position: center center;
-//     background-repeat: no-repeat;
-//     background-attachment: fixed;
-//     background-size: cover;
-//     height: 100%;
-//     width: 100%;
-//     position: absolute;
-//   }
-// }
+@media only screen and (min-device-width: 480px){
+  // For phones
+  .header {
+    background: image-url('el-capitan-2.jpg');
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+    height: 100%;
+    width: 100%;
+    position: absolute;
+  }
+}
 
 
 .logo {
