--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -96,7 +96,7 @@ h5 {
     background: image-url('el-capitan-2.jpg');
     background-position: center center;
     background-repeat: no-repeat;
-    background-attachment: fixed;
+    // background-attachment: fixed;
     background-size: cover;
     height: 100%;
     width: 100%;
