--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -58,20 +58,19 @@ h5 {
     background-size: cover;
   }
 }
-/* ----------- iPad mini ----------- */
-
-/* Portrait and Landscape */
-@media screen
-  and (min-device-width: 768px)
-  and (max-device-width: 1024px)
-  and (-webkit-min-device-pixel-ratio: 1) {
-    .header {
-      background: image-url('el-capitan-2.jpg');
-      background-size: cover;
-    }
+@media screen and (min-device-width: 768px){
+  // For tablet
+  .header {
+    background: image-url('el-capitan-2.jpg');
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+    height: 100%;
+    width: 100%;
+    position: absolute;
+  }
 }
-/* ----------- iphone ----------- */
-
 @media screen and (min-device-width: 480px){
   // For phones
   .header {
