Home and Work links fixed to reload on forward and back page click in browser

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -9,7 +9,7 @@
     				<ul class="text-left">
     					<li class="sliding-u-l-r-1"><a href="#">Home</a></li>
     					<li class="sliding-u-l-r-2"><a id="about-link" class="about-link" href="#slide-2">About</a></li>
-    					<li class="sliding-u-l-r-1"><a href="home/work" onclick="window.location.href = window.location.href='/home/work'">Work</a></li>
+    					<li class="sliding-u-l-r-1"><a href="http://www.devonjohnson.io/home/work">Work</a></li>
               <li class="sliding-u-l-r-3"><a href="https://github.com/djohnson0308">Github</a></li>
               <li class="sliding-u-l-r-4"><a href="https://www.linkedin.com/in/devon-l-johnson-80a76884/">LinkedIn</a></li>
     					<li class="sliding-u-l-r-4"><a href="#slide-5">Contact</a></li>
