--- a/app/views/home/work.html.erb
+++ b/app/views/home/work.html.erb
@@ -15,7 +15,7 @@
                    <a href="#page-top"></a>
                </li>
                <li>
-                   <a class="page-scroll sliding-u-l-r-5" onClick="window.location.href = window.location.href='/'">HOME</a>
+                   <a href="http://www.devonjohnson.io" class="page-scroll sliding-u-l-r-5">HOME</a>
                </li>
                <li>
                    <a class="page-scroll sliding-u-l-r-5" href="https://github.com/djohnson0308">GITHUB</a>
@@ -348,8 +348,8 @@
     </div>
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
-        <div class="col-md-3 col-md-offset-1"><a href="/" onclick="window.location.href = window.location.href='/'"><h3 class="nav-title">Home</h3></a></div>
-        <div class="col-md-3 col-md-offset-1"><a href="https://github.com/djohnson0308"><h3 class="nav-title">Github</h3></a></div>
+        <div class="col-md-3 col-md-offset-1"><a href="http://www.devonjohnson.io"><h3 class="nav-title">Home</h3></a></div>
+        <div class="col-md-3 col-md-offset-1"><a href="https://www.github.com/djohnson0308"><h3 class="nav-title">Github</h3></a></div>
         <div class="col-md-3 col-md-offset-1"><a href="https://www.linkedin.com/in/devon-l-johnson-80a76884/"><h3 class="nav-title">LinkedIn</h3></a></div>
       </div>
     </div>
