work and home links fixed to load javascript on page forward and back

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -9,7 +9,7 @@
     				<ul class="text-left">
     					<li class="sliding-u-l-r-1"><a href="#">Home</a></li>
     					<li class="sliding-u-l-r-2"><a id="about-link" class="about-link" href="#slide-2">About</a></li>
-    					<li class="sliding-u-l-r-1"><a href="http://www.devonjohnson.io/home/work">Work</a></li>
+    					<li class="sliding-u-l-r-1"><a href="http://www.devonjohnson.io/home/work" onClick="window.location.href = window.location.href='http://www.devonjohnson.io/home/work'">Work</a></li>
               <li class="sliding-u-l-r-3"><a href="https://github.com/djohnson0308">Github</a></li>
               <li class="sliding-u-l-r-4"><a href="https://www.linkedin.com/in/devon-l-johnson-80a76884/">LinkedIn</a></li>
     					<li class="sliding-u-l-r-4"><a href="#slide-5">Contact</a></li>
@@ -164,7 +164,7 @@
     </div>
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
-        <div class="col-md-3 col-md-offset-1"><a href="http://www.devonjohnson.io/home/work"><h3 class="nav-title">Work</h3></a></div>
+        <div class="col-md-3 col-md-offset-1"><a href="http://www.devonjohnson.io/home/work" onClick="window.location.href = window.location.href='http://www.devonjohnson.io/home/work'"><h3 class="nav-title">Work</h3></a></div>
         <div class="col-md-3 col-md-offset-1"><a href="https://github.com/djohnson0308"><h3 class="nav-title">Github</h3></a></div>
         <div class="col-md-3 col-md-offset-1"><a href="https://www.linkedin.com/in/devon-l-johnson-80a76884/"><h3 class="nav-title">LinkedIn</h3></a></div>
       </div>
