--- a/app/views/home/work.html.erb
+++ b/app/views/home/work.html.erb
@@ -15,7 +15,7 @@
                    <a href="#page-top"></a>
                </li>
                <li>
-                   <a href="/" class="page-scroll sliding-u-l-r-5" onClick="window.location.href = window.location.href='/'">HOME</a>
+                   <a href="http://www.devonjohnson.io" class="page-scroll sliding-u-l-r-5" onClick="window.location.href = window.location.href='http://www.devonjohnson.io'">HOME</a>
                </li>
                <li>
                    <a class="page-scroll sliding-u-l-r-5" href="https://github.com/djohnson0308">GITHUB</a>
