--- a/app/views/home/work.html.erb
+++ b/app/views/home/work.html.erb
@@ -323,7 +323,7 @@
                <div class="item active">
                 <img class="img-responsive" src="/assets/stage-curtains.jpg" alt="...">
                  <div class="carousel-caption">
-                   <h3>Coming Soon!</h3>
+                   <h3>Coming Soon</h3>
                  </div>
                </div>
 
