--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>DLFJ</title>
+    <title>devonjohnson.io</title>
     <%= csrf_meta_tags %>
-
+    <link rel="icon" href="/assets/portfolio-logo3.png">
     <link rel="stylesheet" href="/assets/aos.css">
     <!-- google fonts -->
     <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
