--- a/app/views/home/work.html.erb
+++ b/app/views/home/work.html.erb
@@ -47,33 +47,32 @@
    </div>
 </header>
 
+<div class="work-body">
 <!-- About Section -->
 <section id="about" class="about">
    <div class=container>
      <div class="row">
-       <div class="col-lg-12 text-center">
-           <h1 data-aos="fade" class="brand-heading">Work</h1>
+       <div class="col-md-12 text-center">
+           <h1 data-aos="fade" data-aos-offset="0" class="brand-heading">Work</h1>
        </div>
-       <div class="list-horizontal text-center">
-         <ul>
-           <li></li>
-           <li></li>
-           <li></li>
-           <li></li>
-           <li></li>
-         </ul>
-       </div>
-       <div class="col-lg-12 text-center heading" data-aos="fade-left" data-aos-offset="0">
-         <h2>What I've been up to</h2>
-       </div>
-       <div class="col-lg-12 text-center" data-aos="fade-left" data-aos-offset="0">
-         <h3>Here's a selection of some of my recent work.</h3>
+       <div class="nav-arrow col-md-12 text-center">
+         <a href="#work-text" class="ion-ios-arrow-down blink_me" style="color:#fff; font-size:30px;"></a>
        </div>
      </div>
    </div>
 </section>
-
- <!-- Portfolio -->
+<section id="work-text">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12 text-center heading" data-aos="fade-left" data-aos-offset="0">
+        <h2>What I've been up to</h2>
+      </div>
+      <div class="col-md-12 text-center" data-aos="fade-left" data-aos-offset="0">
+        <h3>Here's a selection of some of my recent work.</h3>
+      </div>
+    </div>
+  </div>
+</section>
 <section id="portfolio" class="portfolio-1">
     <div class="container">
         <div class="row">
@@ -341,6 +340,7 @@
      </div>
    </div>
 </section>
+</div>
 <footer>
   <div class="container">
     <div class="footer-logo col-md-4 col-md-offset-4 text-center">
@@ -391,5 +391,32 @@ function collapseNavbar() {
 
 $(window).scroll(collapseNavbar);
 $(document).ready(collapseNavbar);
+</script>
+<!-- smooth scroll to section cdn and js -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script>
+$(document).ready(function(){
+  // Add smooth scrolling to all links
+  $(".nav-arrow a").on('click', function(event) {
 
+    // Make sure this.hash has a value before overriding default behavior
+    if (this.hash !== "") {
+      // Prevent default anchor click behavior
+      event.preventDefault();
+
+      // Store hash
+      var hash = this.hash;
+
+      // Using jQuery's animate() method to add smooth page scroll
+      // The optional number (800) specifies the number of milliseconds it takes to scroll to the specified area
+      $('html, body').animate({
+        scrollTop: $(hash).offset().top
+      }, 800, function(){
+
+        // Add hash (#) to URL when done scrolling (default click behavior)
+        window.location.hash = hash;
+      });
+    } // End if
+  });
+});
 </script>
