carousel set to pause

--- a/app/assets/stylesheets/work.css
+++ b/app/assets/stylesheets/work.css
@@ -149,7 +149,7 @@ padding-top: 10em;
   color: #636363;
 }
 .portfolio-1 h2 {
-  color: #85b3c2;
+  color: #77a1ae;
 }
 .portfolio-1 p {
   color: #636363;
