--- a/app/views/home/work.html.erb
+++ b/app/views/home/work.html.erb
@@ -96,7 +96,7 @@
       <div class="modal fade ts-modal" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-lg">
           <div class="modal-content">
-            <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+            <div id="carousel-example-generic" class="carousel slide" data-ride="carousel" data-interval="false">
 
               <!-- Wrapper for slides -->
               <div class="carousel-inner">
@@ -164,7 +164,7 @@
      <div class="modal fade ll-modal" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
        <div class="modal-dialog modal-lg">
          <div class="modal-content">
-           <div id="ll-carousel" class="carousel slide" data-ride="carousel">
+           <div id="ll-carousel" class="carousel slide" data-ride="carousel" data-interval="false">
 
              <!-- Wrapper for slides -->
              <div class="carousel-inner">
@@ -242,7 +242,7 @@
      <div class="modal fade ps-modal" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
        <div class="modal-dialog modal-lg">
          <div class="modal-content">
-           <div id="ps-carousel" class="carousel slide" data-ride="carousel">
+           <div id="ps-carousel" class="carousel slide" data-ride="carousel" data-interval="false">
 
              <!-- Wrapper for slides -->
              <div class="carousel-inner">
@@ -315,7 +315,7 @@
      <div class="modal fade sf-modal" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
        <div class="modal-dialog modal-lg">
          <div class="modal-content">
-           <div id="sf-carousel" class="carousel slide" data-ride="carousel">
+           <div id="sf-carousel" class="carousel slide" data-ride="carousel" data-interval="false">
 
              <!-- Wrapper for slides -->
              <div class="carousel-inner">
