--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -286,8 +286,11 @@ button {
 #slide-5 a:visited {
   color: #337ab7;
 }
+#slide-5 .contact-info {
+  margin-top: 50px;
+}
 #slide-5 .brands {
-  margin-top: 150px;
+  margin-top: 100px;
   padding-bottom: 15px;
 }
 #slide-5 .brands img {
