--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -125,6 +125,9 @@
     <div class="email col-md-4 col-md-offset-4 text-center">
       <a href="mailto:dljohnson@rollins.edu" class="btn btn-lg btn-dark item" data-aos="zoom-out" data-aos-offset="50"><i class="fa fa-envelope-o" aria-hidden="true"></i> MESSAGE ME</a>
     </div>
+    <div class="contact-info col-md-12 text-center">
+      <p data-aos="fade-up" data-aos-offset="50">Devon Johnson<br>(239) 823-8693<br>dljohnson@rollins.edu<br>400 NW 26th Street,<br>Miami, FL 33127</p>
+    </div>
   </div>
   <div class="brands container">
     <div class="row">
