--- a/app/views/home/work.html.erb
+++ b/app/views/home/work.html.erb
@@ -55,8 +55,8 @@
        <div class="col-md-12 text-center">
            <h1 data-aos="fade" data-aos-offset="0" class="brand-heading">Work</h1>
        </div>
-       <div class="nav-arrow col-md-12 text-center">
-         <a href="#work-text" class="ion-ios-arrow-down blink_me" style="color:#fff; font-size:30px;"></a>
+       <div id="slide-point"class="nav-arrow col-md-12 text-center">
+         <a href="#slide-point" class="ion-ios-arrow-down blink_me" style="color:#fff; font-size:30px;"></a>
        </div>
      </div>
    </div>
