--- a/app/views/home/work.html.erb
+++ b/app/views/home/work.html.erb
@@ -78,7 +78,7 @@
         <div class="row">
             <div class="display col-lg-12 text-center">
               <div class="col-md-6 col-md-offset-3 text-center">
-                <a data-toggle="modal" data-target=".ts-modal"><img data-aos="fade-up" data-aos-duration="10000" class="img-portfolio img-responsive" src="/assets/tagsnooper-home.png"></a>
+                <a data-toggle="modal" data-target=".ts-modal"><img data-aos="fade-up" data-aos-duration="10000" class="img-portfolio img-responsive" src="/assets/tagsnooper-landing-v2.png"></a>
               </div>
             </div>
               <div class="col-lg-12 text-center">
@@ -101,7 +101,7 @@
               <!-- Wrapper for slides -->
               <div class="carousel-inner">
                 <div class="item active">
-                 <img class="img-responsive" src="/assets/tagsnooper-home-2.png" alt="...">
+                 <img class="img-responsive" src="/assets/tagsnooper-landing-v2.png" alt="...">
                   <div class="carousel-caption">
                   </div>
                 </div>
